--- a/public/stylesheets/large.css
+++ b/public/stylesheets/large.css
@@ -96,7 +96,13 @@
     /******LOGIN PAGE********/
     #login-container p {
         margin-top: 0px;
+        margin-bottom: 10px;
     }
+
+    #signup-header {
+        margin-bottom: 10px;    
+    }
+
     #signUp, #login {
         display: flex;
         flex-direction: column;
